--- a/data/events.yml
+++ b/data/events.yml
@@ -2,10 +2,10 @@
 # The first event should be birth.
 # The date should match start_date in content/index.md.
 #
-"1975-09-19":
+"1973-11-30":
     - headline: "🐣 I was born"
-      description: "I entered the world at around 9am in Brooklyn, New York, USA, the youngest of 4 by far, a happy accident. Thanks, Mom. Dad came to the hospital in a jacket and tie to meet me for the first time."
-      based: "Brooklyn"
+      description: "Lorem ipsum"
+      based: "Virginia Beach"
       doing: "I was tiny"
 
 "1980-09-01":
