--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://weeks.ginatrapani.org/'
+baseURL = 'https://weeks.mcgarity.me/'
 languageCode = 'en-us'
 title = 'My Life in Weeks'
 disableKinds = ["taxonomy", "taxonomy"]
@@ -6,4 +6,8 @@ enableEmoji = true
 
 
 [params]
-author = "Gina Trapani"
+author = "Matthew McGarity"
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
