--- a/data/events.yml
+++ b/data/events.yml
@@ -3,10 +3,10 @@
 # The date should match start_date in content/index.md.
 #
 "1973-11-30":
-    - headline: "🐣 I was born"
-      description: "Lorem ipsum"
-      based: "Virginia Beach"
-      doing: "I was tiny"
+    - headline: 🐣 I was born
+      description: Lorem ipsum
+      based: Virginia Beach
+      doing: I was tiny
 
 "1980-09-01":
     - headline: "🖍️ Kindergarten"
