Added personal data & cleaned up header

--- a/data/colors.yml
+++ b/data/colors.yml
@@ -6,9 +6,6 @@
 # Convert based and doing class_name's to lower case and replace spaces with dashes
 # i.e., New York City becomes new-york-city
 #
-- class_name: "virginia-beach"
-  element: "border"
-  color_name: "#cccccc"
 - class_name: "brooklyn"
   element: "border"
   color_name: "#8eb2d6"
@@ -45,3 +42,60 @@
 - class_name: "funemployed"
   element: "background-color"
   color_name: "white"
+- class_name: "virginia-beach"
+  element: "border"
+  color_name: "#8eb2d6"
+- class_name: "cupertino"
+  element: "border"
+  color_name: "#FCC737"
+- class_name: "northbrook"
+  element: "border"
+  color_name: "#118B50"
+- class_name: "dallas"
+  element: "border"
+  color_name: "#469046"
+- class_name: "southlake"
+  element: "border"
+  color_name: "#8eb2d6"
+- class_name: "denton"
+  element: "border"
+  color_name: "#FCC737"
+- class_name: "austin"
+  element: "border"
+  color_name: "#118B50"
+- class_name: "addison"
+  element: "border"
+  color_name: "#469046"
+- class_name: "mckinney"
+  element: "border"
+  color_name: "#8eb2d6"
+- class_name: "i-was-tiny"
+  element: "background-color"
+  color_name: "white"
+- class_name: "waiting-to-start-school"
+  element: "background-color"
+  color_name: "#FFF6DA"
+- class_name: "slightly-larger"
+  element: "background-color"
+  color_name: "#E8F9FF"
+- class_name: "a-big-boy-now"
+  element: "background-color"
+  color_name: "#C9E9D2"
+- class_name: "kindergartener"
+  element: "background-color"
+  color_name: "#FFE3E3"
+- class_name: "student"
+  element: "background-color"
+  color_name: "#F8E7F6"
+- class_name: "high-school-student"
+  element: "background-color"
+  color_name: "#d6d6f0"
+- class_name: "college-student"
+  element: "background-color"
+  color_name: "white"
+- class_name: "graduate-student"
+  element: "background-color"
+  color_name: "white"
+- class_name: "living"
+  element: "background-color"
+  color_name: "#FFF6DA"
